--- a/hackflix/package.json
+++ b/hackflix/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-rating-stars-component": "^2.2.0",
+    "react-simple-star-rating": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
