--- a/hackflix/package.json
+++ b/hackflix/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^7.9.6",
     "react-simple-star-rating": "^5.1.7"
   },
   "devDependencies": {
